--- a/.gitignore
+++ b/.gitignore
@@ -58,12 +58,12 @@ CHANGELOG.md
 # Casper generated files
 /core/test/functional/*.png
 
-config.js
+#config.js
 /core/client/config.js
 
 # Built asset files
-/core/built
-/core/client/assets/css
+#/core/built
+#/core/client/assets/css
 /core/client/assets/img/contributors/
 /core/client/docs/dist/css
 /core/client/templates/-contributors.hbs
