if admin, redirect to azurewebsites domain

--- a/web.config
+++ b/web.config
@@ -12,7 +12,7 @@
           <conditions>
             <add input="{HTTPS}" pattern="^OFF$" />
           </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+          <action type="Redirect" url="https://tuan-blog-vi.azurewebsites.net/{R:1}" redirectType="Permanent" />
         </rule>
         <rule name="StaticContent">
           <action type="Rewrite" url="public{REQUEST_URI}"/>
