add readium theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "content/themes/ghostium"]
 	path = content/themes/ghostium
 	url = https://github.com/oswaldoacauan/ghostium.git
+[submodule "content/themes/readium"]
+	path = content/themes/readium
+	url = https://github.com/starburst1977/readium.git
